# heatit

./: .gitignore  hacs.json  pyproject.toml
custom_components/heatit/: __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py  strings.json
custom_components/heatit/heatit_api/: __init__.py  auth.py  client.py  exceptions.py  models.py
docs/: api.md
heatit_api/: auth.py  cli.py
scripts/: analyze_capture.py  capture_api.py
